--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.38", features = ["derive"] }
+http = "1.3.1"
+httparse = "1.10.1"
 rustls = "0.23.27"
 rustyline = "15.0.0"
