--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 clap = { version = "4.5.38", features = ["derive"] }
 http = "1.3.1"
 httparse = "1.10.1"
+log = "0.4.27"
 rustls = "0.23.27"
 rustyline = "15.0.0"
 
